# live-sports-scores

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: all_sports_grouped.html  all_sports_status.html  mexico_vs_korea_recap.html  soccer_live.html  usa_vs_mexico_preview.html
src/clawplay/: __init__.py  clawplay.py  live_scores.py  match_report.py  report.py  time_utils.py
templates/: MASTER_PROMPT.md  hub.html  live.html  preview.html  recap.html
templates/designs/: 00_index.md  bundes.md  cbb.md  cbb_w.md  cfb.md  cricket.md  epl.md  golf.md  laliga.md  mlb.md  mls.md  nba.md  nfl.md  nhl.md  rugby.md  seriea.md  soccer_live.md  tennis.md  ucl.md  ufc.md  wnba.md  worldcup.md
tests/: __init__.py  test_clawplay.py  test_match_report.py  test_report.py  test_time_utils.py
